# JiPP2

./: CMakeLists.txt
E1NoCopyingConstructor/: CMakeLists.txt
E1NoCopyingConstructor/include/: Point.h
E1NoCopyingConstructor/src/: Point.cpp
Lab5/: CMakeLists.txt
Lab5/include/: class.h
Lab5/src/: class.cpp  main.cpp
Projekt1/: CMakeLists.txt
Projekt1/matrixApp/: CMakeLists.txt
Projekt1/matrixApp/src/: main.cpp
Projekt1/matrixLib/: CMakeLists.txt
Projekt1/matrixLib/include/: lib.h
Projekt1/matrixLib/src/: lib.cpp
firstClass/: CMakeLists.txt
firstClass/include/: FirstClass.h  Prostopadloscian.h
firstClass/src/: FirstClass.cpp  Prostopadloscian.cpp  main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt
firstLibCall/src/: main.cpp
firstStruct/: CMakeLists.txt
firstStruct/src/: main.cpp
lab6/: CMakeLists.txt
lab6/include/: node.h
lab6/src/: main.cpp  node.cpp
lab7/: CMakeLists.txt
lab7/src/: main.cpp
lab8/: CMakeLists.txt
lab8/include/: lab8ListNote.h  lab8TextNote.h  lab8note.h
lab8/src/: lab8ListNote.cpp  lab8TextNote.cpp  lab8note.cpp  main.cpp
lab9/: CMakeLists.txt
lab9/src/: main.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
